cource/ingress/ingress-definition.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: "/demo-path"
            pathType: Prefix
            backend:
              service:
                port:
                  number: 8080
                name: demo-service

  defaultBackend:
    service:
      name: demo-service
      port:
        number: 8080
        name: demo-service-port
