cource/ingress/ingress-host-definition.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress-host
  namespace: demo-namespace
spec:
  rules:
    - host: demo.domain.one
      http:
        paths:
          - path: /one
            pathType: Prefix
            backend:
              service:
                name: demo-one
    - host: demo.domain.two
      http:
        paths:
          - path: /two
            pathType: Prefix
            backend:
              service:
                name: demo-two
